# LLVM-Passes

./: .gitignore  CMakeLists.txt  HelloWorldPass.cpp  README.md  test_program.c
BasicStringEncryptionPass/: StringEncryptionPass.cpp  obfuscated_program  test_program.c
ChakraPasses/: CMakeLists.txt  ChakravyuhaReport.h  ControlFlowFlatteningPass.cpp  FakeCodeInsertionPass.cpp  Makefile  MultiCycleObfuscationPass.cpp  MultiCycleObfuscationPass.h  StringEncryptionPass.cpp  create_comparison.py  parallel_visualize.sh  run_all.sh  run_tests.sh  safe_visualize.sh  visualize.sh
ChakraPasses/test_results/binaries/: test_attributes_multi5  test_attributes_original  test_complex_multi5  test_complex_nested_multi5  test_complex_original  test_early_return_multi5  test_early_return_original  test_goto_multi5  (+14 more)
ChakraPasses/tests/: test_attributes.c
ControlFlowFlatteningPass/: .main.dot  .test_function.dot  CMakeLists.txt  ControlFlowFlatteningPass.cpp  Makefile  create_comparison.py  generate_dots.sh  run_tests.sh
ControlFlowFlatteningPassWithStringEncryption/: CMakeLists.txt  ChakravyuhaReport.h  ControlFlowFlatteningPass.cpp  Makefile  StringEncryptionPass.cpp  create_comparison.py
ControlFlowFlatteningPassWithStringEncryption/test_results/: test_attributes_original.out  test_complex_obfuscated.out  test_goto_original.out  test_loops_original.out  test_nested_if_obfuscated.out  test_phi_original.out  test_program_original.out  test_recursive_obfuscated.out  test_simple_if_original.out
HelloWorldPass/: CMakeLists.txt
StringEncryptAndReportGen/: Makefile
(+288 files in other folders)
